--- a/js/logreader-main.css
+++ b/js/logreader-main.css
@@ -35,6 +35,21 @@
     border-top: 1px solid #eee;
   }
 
+  .qNV7nHT_Ql4vXe1NBMWE .TUOIS3J_DmU9MBWfe9WR {
+    font-style:italic;
+  }
+
+  .qNV7nHT_Ql4vXe1NBMWE .TUOIS3J_DmU9MBWfe9WR::before {
+      content: " (";
+    }
+
+  .qNV7nHT_Ql4vXe1NBMWE .TUOIS3J_DmU9MBWfe9WR::after {
+      content: ")";
+    }
+
+  .qNV7nHT_Ql4vXe1NBMWE .bUs2jReYPK1aagBHWM0L {
+  }
+
 .s2s3Vdnbg0rrqYE79RSY a {
     line-height: 30px;
   }
@@ -309,7 +324,8 @@ th.OTKDXFrip__elQzsAO0r {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 }
 
 .IwCJTokvQlAyHwhvT5wy {
