--- a/css/logreader-main.css
+++ b/css/logreader-main.css
@@ -35,6 +35,21 @@
     border-top: 1px solid #eee;
   }
 
+  .qNV7nHT_Ql4vXe1NBMWE .TUOIS3J_DmU9MBWfe9WR {
+    font-style:italic;
+  }
+
+  .qNV7nHT_Ql4vXe1NBMWE .TUOIS3J_DmU9MBWfe9WR::before {
+      content: " (";
+    }
+
+  .qNV7nHT_Ql4vXe1NBMWE .TUOIS3J_DmU9MBWfe9WR::after {
+      content: ")";
+    }
+
+  .qNV7nHT_Ql4vXe1NBMWE .bUs2jReYPK1aagBHWM0L {
+  }
+
 .s2s3Vdnbg0rrqYE79RSY a {
     line-height: 30px;
   }
@@ -150,7 +165,7 @@ input[type="file"] {
 	@media only screen and (max-width: 1100px) {
 
 	.XdjZ45iqoqqO7fTLXNa_ td.xqVQg6rdRxO7oFKshz4X, .XdjZ45iqoqqO7fTLXNa_ th.xqVQg6rdRxO7oFKshz4X {
-			display: none
+			display: none;
 	}
 		}
 
@@ -299,6 +314,7 @@ th.OTKDXFrip__elQzsAO0r {
 #logreader-root > div {
 	height: 100%;
 	overflow: auto;
+	scrollbar-width: auto;
 }
 
 #OQzYOSTmQCaw3UCPqqZD {
